@@ -1,17 +1,42 @@
 import React from "react";
+import { twMerge } from "tailwind-merge";
 
-export const Avatars = () => {
+export type AvatarProps = {
+  className?: string;
+  email?: string;
+  image?: string;
+  imageStyle?: string;
+  name?: string;
+  nameStyle?: string;
+  emailStyle?: string;
+  variant?: "small" | "medium" | "large";
+};
+
+const variantStyle = {
+  small: "",
+  medium: "",
+  large: "",
+};
+
+export const Avatars: React.FC<AvatarProps> = ({
+  className,
+  email = "maria@ui.email.com",
+  emailStyle,
+  image = "/public/Ellipse2.svg",
+  imageStyle,
+  nameStyle,
+  name = "Maria Rhye",
+  variant = "small",
+}) => {
   return (
-    <div className="flex items-center gap-4">
-      <img
-        
-        src="/public/Ellipse 2.svg"
-        
-      />
-      <div className="font-medium dark:text-white">
-        <div>Maria Rhye</div>
-        <div className="text-sm text-gray-500 dark:text-gray-400">
-        maria@ui.email.com
+    <div className={twMerge("flex items-center gap-2", className)}>
+      <img className={twMerge(imageStyle)} src={image} />
+      <div className={twMerge("", className, variantStyle[variant])}>
+        <div className={twMerge("text-[#373737] font-medium", nameStyle)}>
+          {name}
+        </div>
+        <div className={twMerge("text-[#828282] font-normal", emailStyle)}>
+          {email}
         </div>
       </div>
     </div>
