@@ -1,0 +1,2 @@
+
+export * as AvatarsComponent from "./AvatarsComponent";
