@@ -1,4 +1,3 @@
-import { UserIcon } from "@heroicons/react/24/solid";
 import React from "react";
 
 export type InputProps = {
